--- a/calculadora/index.html
+++ b/calculadora/index.html
@@ -5,7 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Calculadora</title>
-    <link rel="stylesheet" href="/css/main.css" />
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -31,6 +30,6 @@
       <button id="cero" class="btn">0</button>
       <button class="btn">.</button>
     </div>
-    <script src="/js/main.js"></script>
+    <script src="main.js"></script>
   </body>
 </html>
